Add server .env file

--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,9 @@ MONGO_URI = mongodb://localhost:27017/MERN-PROJECT
 GOOGLE_CLIENT_ID=633130674681-kf65cmvss4kpst12piu8kdlrubejb4je.apps.googleusercontent.com
 JWT_SECRET=nOoTvh2sV8-SsbraRisLOw
 GMAIL_EMAIL_ID = singhania9558@gmail.com
-GMAIL_APP_PASSWORD = tceu qsmd gblp exhw
-RAZORPAY_KEY_ID= rzp_test_gbfwEq11DLc6z8
-RAZORPAY_KEY_SECRET= aMV9eU2r7lPNaKS8q48gkM8B
-
+GMAIL_APP_PASSWORD=tceuqsmdgblpexhw
+RAZORPAY_KEY_ID=rzp_test_gbfwEq11DLc6z8
+RAZORPAY_KEY_SECRET=aMV9eU2r7lPNaKS8q48gkM8B
+RAZORPAY_MONTHLY_PLAN_ID=plan_Qq8H2pOuS4fst0
+RAZORPAY_YEARLY_PLAN_ID=plan_Qq8HKaOTRtuzsW
+RAZORPAY_WEBHOOK_SECRET=036bbd57-f626-4769-89f0-fa2871683025
